@@ -35,16 +35,15 @@ int main (void)
   str = CFURLCopyResourceSpecifier (url);
   PASS(str == NULL,
     "resourceSpecifier of http://www.w3.org/silly-file-path/ is NULL");
-  CFRelease (str);
   
   url2 = CFURLCreateWithString (NULL, CFSTR("additional/string"), url);
-  PASS(CFURLCanBeDecomposed(url) == true,
+  PASS(CFURLCanBeDecomposed(url2) == true,
     "additional/string path can be decomposed since base URL is decomposable");
   str = CFURLGetString (url2);
   PASS_CFEQ(str, CFSTR("additional/string"), "String is additional/string");
   str = CFURLCopyPath (url2);
-  PASS_CFEQ(str, CFSTR("/silly-file-path/additional/string"),
-    "Copied path is resolved against base.");
+  PASS_CFEQ(str, CFSTR("additional/string"),
+    "Copied path is not resolved against base.");
   CFRelease (str);
   str = CFURLCopyResourceSpecifier (url2);
   PASS(str != NULL, "Resource specifier of relative url is additional/string");
@@ -70,9 +69,9 @@ int main (void)
     "Strict path of http://www.w3.org/silly-file-name is silly-file-name");
   CFRelease (str);
   str = CFURLCopyResourceSpecifier (url);
-  PASS_CFEQ(str, CFSTR("//www.w3.org/silly-file-name?query#fragment"),
-    "Resource specifier of http://www.w3.org/silly-file-name is "
-    "//www.w3.org/silly-file-name?query#fragment");
+  PASS_CFEQ(str, CFSTR("query#fragment"),
+    "Resource specifier of http://www.w3.org/silly-file-name?query#fragment is"
+    " query#fragment");
   CFRelease(str);
   str = CFURLCopyQueryString (url, NULL);
   PASS_CFEQ(str, CFSTR("query"), "Query of "
@@ -86,18 +85,10 @@ int main (void)
   CFRelease (url);
   
   url = CFURLCreateWithString (NULL,
-    CFSTR("http://www.w3.org/silly?param1=test1&param2=test2"), NULL);
-  str = CFURLCopyResourceSpecifier (url);
-  PASS_CFEQ(str, CFSTR("param1=test1&param2=test2"),
-    "Resource specifier for http://www.w3.org/silly?param1=test1&param2=test2"
-    " is param1=test1&param2=test2");
-  str = CFURLCopyQueryString (url, NULL);
-  PASS_CFEQ(str, CFSTR("param1=test1&param2=test2"), "Query of "
-    "http://www.w3.org/silly?param1=test1&param2=test2 is param1=test1&param2=test2");
-  CFRelease (str);
+    CFSTR("http://www.w3.org/silly;type=test"), NULL);
   str = CFURLCopyParameterString (url, NULL);
-  PASS_CFEQ(str, CFSTR("test1"), "Parameter string for "
-    "http://www.w3.org/silly?param1=test1&param2=test2 is test1");
+  PASS_CFEQ(str, CFSTR("type=test"), "Parameter string for "
+    "http://www.w3.org/silly;type=test");
   CFRelease(str);
   
   CFRelease(url);
