@@ -1,3 +1,12 @@
+2012-02-18 Stefan Bidigaray <stefanbidi@gmail.com>
+
+	* Source/CFURL.c: Fixes to CFURLStringParse() and
+	CFURLCopyAbsoluteURL().
+	* Tests/CFString/general.m:
+	* Tests/CFLocale/displayvalues.m:
+	* Tests/CFURL/file_system_path.m:
+	* Tests/CFURL/create.m: Fix tests.
+
 2012-02-16 Stefan Bidigaray <stefanbidi@gmail.com>
 
 	* Source/CFURL.c: A little clean up.
